iac-kubernetes/manifest/longhorn/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: longhorn-frontend
  namespace: longhorn-system
  annotations:
    metallb.universe.tf/address-pool: vlan50-pool
spec:
  selector:
    app: longhorn-ui
  ports:
    - port: 80
      targetPort: 8000
  type: LoadBalancer
